# wow-tools

./: .buildpacks  .gitignore  .pre-commit-config.yaml  Procfile  manage.py  pyproject.toml
frontend/: index.js  package-lock.json  package.json
wishlist/: forms.py  models.py  urls.py  views.py
wishlist/migrations/: 0001_initial.py
wishlist/templates/wishlist/: base.html  index.html  login.html  login_sent.html  search.html  wishlist.html
wow_tools/: asgi.py  settings.py  urls.py  wsgi.py
