[tool.poetry]
name = "wow-tools"
version = "0.1.0"
description = ""
authors = ["Josef Rousek <josef.rousek@gmail.com>"]

[tool.poetry.dependencies]
python = "3.8.7"
Django = "^3.1.5"
django-magiclink = "^1.0.0"
requests = "^2.25.1"
whitenoise = "^5.2.0"
waitress = "^1.4.4"
dj-database-url = "^0.5.0"
psycopg2-binary = "^2.8.6"
python-dotenv = {extras = ["cli"], version = "^0.15.0"}
django-hashids = "^0.3.0"

[tool.poetry.dev-dependencies]
pre-commit = "^2.9.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
